Refactor WhatsApp integration and delivery handling